[package]
name = "five-in-row"
version = "0.1.0"
authors = ["9motom6 <9motom6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.10"
features = ["json", "blocking"]

